2004-09-08  Not Zed  <NotZed@Ximian.com>

        ** See bug #64454.

	* mail-composer-errors.xml: add accelerators to modified message
	dialogue.

2004-08-13  Radek Doulik  <rodo@ximian.com>

	* e-msg-composer.c (e_msg_composer_show_sig_file): set paragraph
	style to normal to avoid signature landing in PRE paragraph

2004-07-29  Carlos Garnacho Parro  <carlosg@gnome.org>

	* e-msg-composer-select-file.[ch]: Optionally use GtkFileChooser
	if compiled against Gtk+ >= 2.4.0. (e_msg_composer_select_file):
	added save_mode parameter

	* e-msg-composer.c: use the modified e_msg_composer_select_file()
	function

2004-07-28  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer.c: Fixes for api changes in mail/ for 61940.

2004-07-23  Radek Doulik  <rodo@ximian.com>

	* listener.c: removed unused static variable listener_vepv

	* added len parameter to set_editor_text,
	e_msg_composer_set_body_text, e_msg_composer_set_pending_body. it
	allows us to send whole buffer (even if it contains \0 in the
	middle) to gtkhtml editor.

2004-07-22  Radek Doulik  <rodo@ximian.com>

	* e-msg-composer.c (set_editor_text): removed body content +
	signature html concatenating and call e_msg_composer_show_sig_file
	instead

	Fixes #59490

2004-07-20  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer-attachment.c: include config.h.  See #61395.

2004-06-18  Not Zed  <NotZed@Ximian.com>

	** Fix for #60387.

	* mail-composer-errors.xml: added an error for failing to retrieve
	to-be-attached messages.

	* e-msg-composer.c (message_rfc822_dnd): remove this, we only want
	to treat it as a real rfc822 message, not a berkeley mailbox.
	(drag_data_received): handle the rfc822 type here, and also the
	new x-uid-list type.
	(attach_message): helper set a description on attached messages.

2004-06-16  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer.c (e_msg_composer_guess_mime_type): clean up the
	code slightly.

	* evolution-composer.c (impl_Composer_set_headers): Fix all the
	strn?casecmp calls.
